# WatchWolf-Client

./: .gitignore  CMakeLists.txt  Client.py  ClientConnector.py  ClientPetition.py  ClientsManager.py  ClientsManagerConnector.py  ClientsManagerPetition.py  ConnectorHelper.py  Diagram.mdj  Dockerfile  Item.py  ItemType.py  LICENSE.md  MinecraftChunkManager.py  MinecraftClient.py  MineflayerClient.py  OnClientConnected.py  OnClientDisconnected.py  OnMessage.py  Position.py  Protocols.xlsx  README.md  main.cpp  requirements.py  requirements.txt  tester.py
Documentation/: .gitignore  Diagram.mdj  Protocols.tex  README.md  sample.bib
entities/: Entity.py  EntityType.py
items/: Item.py  ItemType.py  items.json
view/: ImageList.py  MineflayerViewer.py  Viewer.py
